apollo-federation/src/sources/connect/validation/snapshots/validation_tests@keys_and_entities__invalid__arg_type_doesnt_match_field_type.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/keys_and_entities/invalid/arg_type_doesnt_match_field_type.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product` has invalid arguments. Mismatched type on field `id` - expected `ID` but found `String`.",
        locations: [
            6:11..6:22,
            10:7..10:19,
        ],
    },
]
