apollo-federation/src/sources/connect/validation/snapshots/validation_tests@keys_and_entities__invalid__entity_arg_field_arg_name_mismatch_composite_key.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/keys_and_entities/invalid/entity_arg_field_arg_name_mismatch_composite_key.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "Query.product has invalid arguments. Field `id` on `CountryInput` does not have a matching field `id` on `Country`.",
        locations: [
            42:3..42:10,
            12:7..12:19,
        ],
    },
]
