apollo-federation/src/sources/connect/validation/snapshots/validation_tests@keys_and_entities__invalid__no_args_for_entity_true.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/keys_and_entities/invalid/no_args_for_entity_true.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product` must have arguments when using `entity: true`. See https://go.apollo.dev/connectors/directives/#rules-for-entity-true",
        locations: [
            10:7..10:19,
        ],
    },
]
